# lms-fast-api

./: main.py  pyproject.toml
api/: courses.py  users.py
